--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,13 @@ spring:
   datasource:
     generate-unique-name: false
     name: tacocloud
+#  data:
+#    mongodb:
+#      host: mongodb.tacocloud.com
+#      port: 27017
+#      username: tacocloud
+#      password: s3cr3tp455w0rd
+#      database: tacoclouddb
+  mongodb:
+    embedded:
+      version: 4.2.0
